2009-12-29  Romain Francois <francoisromain@free.fr>

	* src/RcppXPtr.h: new smart external pointer wrapper. The RcppXPtr 
	template can be used to wrap a external pointer (SEXP) so that it 
	looks like the dumb pointer it is wrapping (as far as the * and -> 
	operator are concerned). The template parameter controls the type
	of object that is wrapped by the pointer. 
	
	* src/Rcpp.h: importing the RcppXPtr.h header
	
	* src/RcppExample.cpp: added an example of RcppXPtr usage
	
	* inst/examples/RcppInline/external_pointer.r: added example using
	the RcppXPtr template
	
	* DESCRIPTION: marking this as 0.7.0.4
	
2009-12-28  Romain Francois <francoisromain@free.fr>

	* R/exceptions.R: s/uncaught_cpp_exception/cpp_exception/ and added a
	'class' argument to hold the class name of the C++ exception
	(range_error, etc ...)

	* inst/examples/RcppInline/UncaughtExceptions.r: extend examples to
	show how to grab details of the C++ exception

	* src/exception_handling.cpp: factored out from RcppCommon.cpp, now
	able to grab the class name of the exception and its message. 

2009-12-27  Dirk Eddelbuettel  <edd@debian.org>

	* R/RcppInline.R: Removed as we now use cfunction() from inline (>= 0.3.4)
        * man/{RcppInline,internals}.Rd: idem

	* NAMESPACE: removed entries related to cfunction and methods

	* DESCRIPTION: Added 'Suggests: inline (>= 0.3.4)

	* inst/examples/RcppInline/*R: Add library(inline) or require(inline)

2009-12-27  Romain Francois <francoisromain@free.fr>

	* src/RcppCommon.{h,cpp} : added experimental uncaught exception
	management

	* R/zzz.R : added .onAttach, used to register the uncaught exception
	management on package attach

	* R/exceptions.R : added R side of the exception management, unexported
	as it is only used by internal C++ code

	* inst/examples/RcppInline/UncaughtExceptions.r: demo of the
	uncaught exception system

	* src/RcppSexp.{h,cpp} : added method isNULL to test if the
	underlying SEXP is NULL
